# retry-cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
scripts/: add_help_to_readme.py  format.sh  lint.sh  pre_commit.sh  release.sh  test.sh  verify_version.sh
src/retry_cli/: __init__.py  __main__.py
tests/: test_cli_integration.py  test_main.py  test_parse_command.py
